--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -1,9 +1,15 @@
 body {
+	font-family: 'Raleway', Arial, sans-serif;
+	color: #f1f1f1;
+
 	padding: 0px;
 	margin: 0px;
 }
 
-.full-height {
+section.full-height {
 	height: 100vh;
-	border: 1px solid black;
+}
+
+section.grey {
+	background-color: #282828
 }
