--- a/assets/stylesheets/nav.css
+++ b/assets/stylesheets/nav.css
@@ -1,3 +1,29 @@
 nav {
+  width: 100%;
+  height: 90px;
+  position: relative;
   background-color: #000;
+}
+
+nav img, nav ul {
+  display: inline-block;
+  position: absolute;
+  bottom: 5px;
+}
+
+nav ul {
+  margin: 0;
+  right: 40px;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  font-size: 24px;
+  padding: 0 50px 0 0;
+  display: inline;
+}
+
+nav img {
+  margin: 0;
+  left: 40px;
 }
