--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -6,6 +6,11 @@ body {
 	margin: 0px;
 }
 
+h1 {
+	text-transform: uppercase;
+	font-size: 50px;
+}
+
 section {
 	width: 100%;
 }
@@ -22,4 +27,27 @@ section.grey {
 	width: 95%;
 	max-width: 1000px;
 	margin: auto;
+}
+
+.showreel iframe {
+	margin-top: 40px;
+	width: 1000px;
+	height: 563px;
+}
+
+#projects-intro .video-background {
+}
+
+#projects-intro .title {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#projects-intro h1 {
+	font-size: 80px;
+	font-weight: 500;
+	text-transform: uppercase;
 }
