--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -1,5 +1,6 @@
-#home {
-  background-color: red; /* TEMP */
+#home .content {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
