--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -31,7 +31,7 @@
 	top: 0;
 	height: 100vh;
 	width: 100%;
-	background-color: lightgray;
+	text-align: center;
 }
 
 body.lightbox-fullscreen {
@@ -41,3 +41,41 @@ body.lightbox-fullscreen {
 .lightbox-close {
 	cursor: pointer;
 }
+
+.btn-previous {
+	position: absolute;
+	left: 50px;
+	top: 45vh;
+}
+
+.btn-next {
+	position: absolute;
+	right: 50px;
+	top: 45vh;
+}
+
+.lightbox-close {
+	position: absolute;
+	right: 50px;
+	top: 50px;
+}
+
+.img-container {
+	width: 100%;
+	height: 90vh;
+}
+
+.img-container img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.img-bottom {
+	height: 10vh;
+	width: 100%;
+	text-align: center;
+	border: 1px solid black;
+	line-height: 10vh;
+	vertical-align: middle;
+}
+
