--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -1,3 +1,7 @@
+#projects h1 {
+	text-align: right;
+}
+
 .project-container-global {
 	overflow: auto;
 }
@@ -79,3 +83,22 @@ body.lightbox-fullscreen {
 	vertical-align: middle;
 }
 
+.showreel iframe {
+	margin-top: 40px;
+	width: 1000px;
+	height: 563px;
+}
+
+#projects-intro .title {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#projects-intro h1 {
+	font-size: 80px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
