--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -19,6 +19,15 @@ section.full-height {
 	height: 100vh;
 }
 
+a {
+	color: #f1f1f1;
+	text-decoration: none;
+}
+
+a:hover {
+	font-weight: bolder;
+}
+
 .grey {
 	background-color: #282828
 }
