--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -67,20 +67,23 @@ body.lightbox-fullscreen {
 .img-container {
 	width: 100%;
 	height: 90vh;
+	line-height: 90vh;
 }
 
 .img-container * {
 	max-width: 100%;
 	max-height: 100%;
+	vertical-align: middle;
 }
 
 .img-bottom {
 	height: 10vh;
 	width: 100%;
 	text-align: center;
-	border: 1px solid black;
+	border-top: 1px solid #212121;
 	line-height: 10vh;
 	vertical-align: middle;
+	margin-top:1px;
 }
 
 
