--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Raleway', Arial, sans-serif;
 	color: #f1f1f1;
-
+	background-color: #282828;
 	padding: 0px;
 	margin: 0px;
 }
