--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -5,12 +5,32 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+#home img {
+  padding: 5px;
 }
 
 #home img.arrow {
-  width: 58px;
+  width: 50px;
 }
 
 #home img.logo {
-  margin: 0 0 100px 0;
+  margin-top: 90px;
+  width: 200px;
 }
+
+#home img.logo-text {
+  width: 40%;
+  padding: 50px 0 75px 0;
+}
+
+/*
+#home .video-background {
+	position: fixed;
+	z-index: -1;
+	margin-top: 65px;
+
+}
+*/
