--- a/assets/stylesheets/nav.css
+++ b/assets/stylesheets/nav.css
@@ -1,32 +1,36 @@
 nav {
   width: 100%;
-  height: 90px;
-  position: relative;
+  height: 64px;
   background-color: #000;
+  z-index: 10;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  margin-bottom: -35px;
 }
 
-nav img, nav ul {
-  display: inline-block;
-  position: absolute;
-  bottom: 5px;
-}
-
-nav ul {
-  margin: 0;
-  right: 40px;
-}
-
-nav ul li {
-  text-transform: uppercase;
-  font-size: 24px;
-  padding: 0 50px 0 0;
+nav ul li{
   display: inline;
 }
 
+nav li {
+  text-transform: uppercase;
+  font-size: 20px;
+  padding:0 50px;
+}
+
+nav ul{
+  padding-top: 22px;
+}
+
+/*
 nav img {
   margin: 0;
-  left: 40px;
+  left: 15px;
+  bottom: 13px;
 }
+
 
 nav.fixed {
   position: fixed;
