--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -1,102 +1,7 @@
-#projects h1 {
-	text-align: right;
-}
-
-
-.project-container-global {
-	overflow: auto;
-}
-
-.project-container {
-	float: left;
-	width: 30%;
-	margin: 1.5%;
-}
-
-.project-thumb {
-	background: lightgrey;
-	cursor: pointer;
-	height: 170px;
-}
-
-.project-caption {
-	text-align: center;
-	padding: 5px;
-}
-
-.lightbox {
-	display: none;
-}
-
-.lightbox.show {
-	display: block;
-	position: fixed;
-	z-index: 1000;
-	left: 0;
-	top: 0;
-	height: 100vh;
-	width: 100%;
-	text-align: center;
-}
-
-body.lightbox-fullscreen {
-	overflow: hidden;
-}
-
-.lightbox-close {
-	cursor: pointer;
-}
-
-.btn-previous {
-	position: absolute;
-	left: 50px;
-	top: 45vh;
-}
-
-.btn-next {
-	position: absolute;
-	right: 50px;
-	top: 45vh;
-}
-
-.lightbox-close {
-	position: absolute;
-	right: 50px;
-	top: 50px;
-}
-
-.img-container {
-	width: 100%;
-	height: 90vh;
-	line-height: 90vh;
-}
-
-.img-container * {
-	max-width: 100%;
-	max-height: 100%;
-	vertical-align: middle;
-}
-
-.img-bottom {
-	height: 10vh;
-	width: 100%;
-	text-align: center;
-	border-top: 1px solid #212121;
-	line-height: 10vh;
-	vertical-align: middle;
-	margin-top:1px;
-}
-
-
-.template {
-	display: none;
-}
-
-
 .showreel iframe {
 	margin-top: 40px;
+	height: 585px;
 	width: 1000px;
-	height: 563px;
 }
 
 #projects-intro .title {
@@ -112,4 +17,21 @@ body.lightbox-fullscreen {
 	font-weight: 500;
 	text-transform: uppercase;
 }
+
+#projects table{
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#projects td {
+	padding: 12px;
+}
+
+
+
+#projects p {
+	text-align: center;
+	margin: 0px;
+}
+
 
