--- a/assets/stylesheets/gallery.css
+++ b/assets/stylesheets/gallery.css
@@ -4,6 +4,11 @@
 	vertical-align: bottom;
 }
 
+#gallery table {
+	margin: 50px auto;
+
+}
+
 #gallery img {
 	max-height: 200px;
 	max-width: 300px;
@@ -29,4 +34,15 @@
 	font-weight: normal;
 	font-size: 16px;
 	text-align: right;
+}
+
+.button {
+	background-color: grey;
+	border: solid black 1px;
+	padding: 15px;
+	border-radius: 5px;
+}
+
+.button:hover {
+	background-color: rgb(0,0,0);
 }
