--- a/assets/stylesheets/gallery.css
+++ b/assets/stylesheets/gallery.css
@@ -27,6 +27,11 @@
 	height: 220px;
 	text-align: center;
 	padding: 12px;
+	vertical-align: bottom;
+}
+
+#gallery h1 {
+	margin-top: 100px;
 }
 
 #gallery h2 {
