--- a/NEW/assets/stylesheets/home.css
+++ b/NEW/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
 #home {
-  background-image: url("../images/creations/8.png");
+  background-image: url("../images/layout/iceland_4_test.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
