new flaticons + mobile version in progress
mobile version : until the presentation section, not included

--- a/NEW/assets/stylesheets/footer.css
+++ b/NEW/assets/stylesheets/footer.css
@@ -8,3 +8,15 @@ footer p {
   padding: 20px 0;
   text-align: center;
 }
+
+footer img {
+	width: 3vw;
+	height: auto; 
+	padding: 10px;
+}
+
+footer .bullet {
+	display: flex;
+	justify-content:center;
+	padding-top: 20px;
+}
