--- a/NEW/assets/stylesheets/contact.css
+++ b/NEW/assets/stylesheets/contact.css
@@ -1,7 +1,7 @@
 #contact {
-  background-image: url("../images/layout/iceland_5.jpg");
+  background-image: url("../images/layout/iceland_1_mir.jpg");
   background-size: cover;
-  background-position: bottom right;
+  background-position: top right;
   background-attachment: fixed;
   border: solid rgb(0, 0, 0) 1px;
   position: relative;
@@ -53,7 +53,7 @@ input[type=text], input[type=email], textarea{
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
-	font-size: 14px;
+	font-size: 1em;
 }
 
 input[type=submit] {
@@ -62,7 +62,6 @@ input[type=submit] {
 	border-radius: 4px;
 	color: white;
 	font-family: 'Raleway';
-	font-size: 14px;
 	padding: 10px 20px;
 	text-decoration: none;
 	cursor: pointer;
