--- a/NEW/assets/stylesheets/global.css
+++ b/NEW/assets/stylesheets/global.css
@@ -6,11 +6,73 @@ body {
 	margin: 0px;
 }
 
+/*			FONTS 			*/
+
 h1 {
 	text-transform: uppercase;
-	font-size: 7vh;
+	font-size: 3em;
 
 }
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5em;
+    /* 2.5x body copy size = 40px */
+    line-height: 1.125;
+  }
+}
+
+
+h2 {						/* Titre de sections */
+	font-size: 80px;
+	font-weight: 500;
+	text-transform: uppercase;
+	text-align: center;
+	border: solid white 1vh;
+	border-radius: 0.5vh;
+	padding:1vh 4vh;
+}
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 3em;
+    border-width: 0.5vh;
+  }
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+p {
+	font-size:1em;
+}
+/* TABLETTES */
+
+@media screen and (max-width: 768px) {
+  p, i, a{
+    font-size: 1.2em;
+    /* equivalent to 16px */
+    line-height: 1.375em;
+    /* equivalent to 22px */
+  }
+}
+
+/* MOBILES */
+
+@media screen and (max-width: 425px) {
+  p, i, a { 
+    font-size: 1em;
+  }
+}
+
+i {
+	text-decoration: none;
+	color: red;
+}
+
+/*			SECTIONS 			*/
 
 section {
 	width: auto;
@@ -33,14 +95,7 @@ section.auto-height {
 	height: auto;
 }
 
-a {
-	color: white;
-	text-decoration: none;
-}
 
-p {
-	font-size:14px;
-}
 
 .grey {
 	background-color: #282828
@@ -65,3 +120,25 @@ p {
 	vertical-align: top;
 	width: 0.2em;
 }
+
+
+
+
+
+/* TABLETTES */
+/*
+@media (max-width: 768px) {
+  class {
+
+  }
+}
+
+/* MOBILES */
+/*
+@media (max-width: 425px) {
+  class { 
+
+  }
+}
+
+*/
