--- a/NEW/assets/stylesheets/footer.css
+++ b/NEW/assets/stylesheets/footer.css
@@ -15,6 +15,13 @@ footer img {
 	padding: 10px;
 }
 
+@media screen and (max-width: 425px) {
+  footer img { 
+    width: 5vw;
+
+  }
+}
+
 footer .bullet {
 	display: flex;
 	justify-content:center;
