--- a/NEW/assets/stylesheets/home.css
+++ b/NEW/assets/stylesheets/home.css
@@ -7,6 +7,12 @@
   position: relative;
 }
 
+@media screen and (max-width: 768px) {
+  #home {
+    background-attachment: scroll;
+  }
+}
+
 #home .content {
   width: 100%;
   height: 100%;
@@ -41,7 +47,7 @@
 
 /* TABLETTES */
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   #home img.logo {
     width: 30vw ;
     max-width: 302px;
@@ -51,7 +57,7 @@
 
 /* MOBILES */
 
-@media (max-width: 425px) {
+@media screen and (max-width: 425px) {
   #home img.logo { 
     width: 50vw;
   }
@@ -63,7 +69,7 @@
   
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   #home img.logo-text {
     width: 50% ;
   }
