--- a/assets/stylesheets/contact.css
+++ b/assets/stylesheets/contact.css
@@ -4,7 +4,7 @@
   background-position: top center;
   background-attachment: fixed;
   position: relative;
-  height: 200vh;
+  height: 100vh;
 }
 
 @media screen and (max-width: 425px){
@@ -28,7 +28,7 @@
 	padding: 3vh;
 	width: 48%;
 	min-width: 40vw;
-	height: auto;
+	height: 80%;
 	position: absolute;
 	bottom: 0;
 }
