--- a/template/css/redox.css
+++ b/template/css/redox.css
@@ -14,15 +14,15 @@ p {
 }
 
 a {
-  color: #ff8d00;
+  color: #ff6000;
 }
 
 a:hover {
-  color: #fec503;
+  color: #C70039;
 }
 
 .text-primary {
-  color: #ff8d00 !important;
+  color: #ff6000 !important;
 }
 
 h1,
@@ -70,14 +70,14 @@ section h3.section-subheading {
 }
 
 .btn-primary {
-  background-color: #ff8d00;
-  border-color: #ff8d00;
+  background-color: #ff6000;
+  border-color: #ff6000;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
-  color: white;
+  background-color: rgba(0,0,0, 0.3); !important;
+  border-color: black !important;
+  color: #ff6000;
 }
 
 .btn-primary:active, .btn-primary:focus {
@@ -86,12 +86,12 @@ section h3.section-subheading {
 }
 
 ::-moz-selection {
-  background: #ff8d00;
+  background: #ff6000;
   text-shadow: none;
 }
 
 ::selection {
-  background: #ff8d00;
+  background: #ff6000;
   text-shadow: none;
 }
 
@@ -116,10 +116,15 @@ img::-moz-selection {
   right: 0;
   padding: 13px;
   text-transform: uppercase;
-  color: white;
+  color: #ff6000;
   border: 0;
-  background-color: #ff8d00;
+  background-color: black;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+#mainNav .navbar-toggler:hover {
+  background-color: #ff6000;
+  color: black;
 }
 
 #mainNav .navbar-brand {
@@ -128,7 +133,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #ff8d00;
+  color: #ff6000;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -141,7 +146,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ff8d00;
+  color: #ff6000;
 }
 
 @media (min-width: 992px) {
@@ -230,6 +235,37 @@ header.masthead .intro-text .intro-heading {
   text-transform: none;
 }
 
+.portfolio-header {
+  text-align: center;
+  color: white;
+
+  background-image: url("../assets/images/layout/iceland_3.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: left;
+  background-size: cover;
+  height: 30vh;
+}
+
+.latest-work iframe {
+  height: 585px;
+  width: 1000px;
+}
+
+@media screen and (max-width: 1000px) {
+  .latest-work iframe {
+    height: auto;
+    width: auto;
+  }
+}
+
+.latest-work {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #portfolio .portfolio-item {
   right: 0;
   margin: 0;
@@ -251,7 +287,7 @@ header.masthead .intro-text .intro-heading {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(255,141,0, 0.9);
+  background: rgba(255, 96, 0, 0.9);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -453,7 +489,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #ff8d00;
+  background-color: #ff6000;
 }
 
 .timeline > li .timeline-image h4 {
@@ -633,7 +669,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #ff8d00;
+  border-color: #ff6000;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -696,20 +732,21 @@ ul.social-buttons li a {
   height: 50px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  color: white;
+  color: #ff6000;
   border-radius: 100%;
   outline: none;
-  background-color: #212529;
+  /*background-color: black;*/
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #ff8d00;
+  background-color: #ff6000;
+  color: white;
 }
 
 /* Couleur des font awesome */
 
 .fa-inverse {
-  color: #ff8d00;
+  color: #ff6000;
 }
 
 .client-logo {
