--- a/template/index.html
+++ b/template/index.html
@@ -216,110 +216,110 @@
 
 
     <!-- Portfolio Grid -->
-    <section class="bg-light" id="portfolio-latest-work">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h3 class="section-subheading text-muted">Cette section est encore en construction.<br/>Vous trouverez ici tous nos derniers travaux.</h3>
-          </div>
-        <div class="row">
-          <div class="latest-work">
-            <iframe src="https://player.vimeo.com/video/267380360?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section class="bg-light" id="portfolio">
       <div class="container">
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_showreel16_2.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Showreel 2017</h4>
-              <p class="text-muted">Vidéo</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_bullebox.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Bulle Box</h4>
-              <p class="text-muted">Vidéo</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_bulleboxweb.png" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Formulaire Bulle Box</h4>
-              <p class="text-muted">Page web</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_buda.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Sziget Festival 2017</h4>
-              <p class="text-muted">Vidéo</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_dentdebroc.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Dent de Broc 2017</h4>
-              <p class="text-muted">Vidéo</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="assets/images/projects/min_showreel16.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Showreel 2016</h4>
-              <p class="text-muted">Vidéo</p>
-            </div>
-          </div>
-        </div>
+      	<div class="row">
+      		<div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+	            <div class="portfolio-hover">
+	            	<div class="portfolio-hover-content">
+	              	<i class="fas fa-plus fa-3x"></i>
+	            	</div>
+	            </div>
+	            <img class="img-fluid" src=" https://i.vimeocdn.com/video/745299359_780x439.webp" alt="">
+		        </a> <!-- https://vimeo.com/305700479 -->
+		        <div class="portfolio-caption">
+		          <h4>Gailland Bro's</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		    </div>
+      		
+		    <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+	            <div class="portfolio-hover">
+	            	<div class="portfolio-hover-content">
+	              	<i class="fas fa-plus fa-3x"></i>
+	            	</div>
+	            </div>
+	            <img class="img-fluid" src="assets/images/projects/min_showreel16.jpg" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Showreel 2017</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		      </div>
+		      <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+		          <div class="portfolio-hover">
+		            <div class="portfolio-hover-content">
+		              <i class="fas fa-plus fa-3x"></i>
+		            </div>
+		          </div>
+		          <img class="img-fluid" src="assets/images/projects/min_bullebox.jpg" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Bulle Box</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		      </div>
+		      <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+		          <div class="portfolio-hover">
+		            <div class="portfolio-hover-content">
+		              <i class="fas fa-plus fa-3x"></i>
+		            </div>
+		          </div>
+		          <img class="img-fluid" src="assets/images/projects/min_bulleboxweb.png" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Formulaire Bulle Box</h4>
+		          <p class="text-muted">Page web</p>
+		        </div>
+		      </div>
+		      <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+		          <div class="portfolio-hover">
+		            <div class="portfolio-hover-content">
+		              <i class="fas fa-plus fa-3x"></i>
+		            </div>
+		          </div>
+		          <img class="img-fluid" src="assets/images/projects/min_buda.jpg" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Sziget Festival 2017</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		      </div>
+		      <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+		          <div class="portfolio-hover">
+		            <div class="portfolio-hover-content">
+		              <i class="fas fa-plus fa-3x"></i>
+		            </div>
+		          </div>
+		          <img class="img-fluid" src="assets/images/projects/min_dentdebroc.jpg" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Dent de Broc 2017</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		      </div>
+		      <div class="col-md-4 col-sm-6 portfolio-item">
+		        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+		          <div class="portfolio-hover">
+		            <div class="portfolio-hover-content">
+		              <i class="fas fa-plus fa-3x"></i>
+		            </div>
+		          </div>
+		          <img class="img-fluid" src="assets/images/projects/min_showreel16.jpg" alt="">
+		        </a>
+		        <div class="portfolio-caption">
+		          <h4>Showreel 2016</h4>
+		          <p class="text-muted">Vidéo</p>
+		        </div>
+		      </div>
+		  </div>
       </div>
     </section>
 
@@ -410,22 +410,22 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 client-logo">
             <a href="http://www.bulle.ch/fr/jeunesse/">
-              <img class="img-fluid d-block mx-auto" src="http://www.bulle.ch/fr/images/531058a4b17ba.png" alt="Service de la Jeunesse de la Ville de Bulle">
+              <img class="img-client mx-auto d-block" src="http://www.bulle.ch/fr/images/531058a4b17ba.png" alt="Service de la Jeunesse de la Ville de Bulle">
             </a>
           </div>
           <div class="col-md-3 col-sm-6 client-logo">
             <a href="https://www.startupministries.ch/">
-              <img class="img-fluid d-block mx-auto" src="https://static.wixstatic.com/media/7070a1_96caf8fad72a4dd28d24b4550fedb7ee~mv2.png/v1/fill/w_205,h_118,al_c,q_80,usm_0.66_1.00_0.01/7070a1_96caf8fad72a4dd28d24b4550fedb7ee~mv2.webp" alt="Start up Ministries">
+              <img class="img-client mx-auto d-block" src="https://static.wixstatic.com/media/7070a1_96caf8fad72a4dd28d24b4550fedb7ee~mv2.png/v1/fill/w_205,h_118,al_c,q_80,usm_0.66_1.00_0.01/7070a1_96caf8fad72a4dd28d24b4550fedb7ee~mv2.webp" alt="Start up Ministries">
             </a>
           </div>
           <div class="col-md-3 col-sm-6 client-logo">
             <a href="http://www.stiftung-mehrwert.ch/">
-              <img class="img-fluid d-block mx-auto" src="http://www.stiftung-mehrwert.ch/assets/images/layout/logo.png" alt="Stiftung Mehrwert">
+              <img class="img-client mx-auto d-block" src="http://www.stiftung-mehrwert.ch/assets/images/layout/logo.png" alt="Stiftung Mehrwert">
             </a>
           </div>
           <div class="col-md-3 col-sm-6 client-logo">
             <a href="http://alphabg.org/">
-              <img class="img-fluid d-block mx-auto" src="https://static1.squarespace.com/static/56d056fb40261db4d8f2f5af/t/5ba258714d7a9c88ca63cc33/1537366334614/logo.jpg" alt="Alpha Bulgaria">
+              <img class="img-client mx-auto d-block" src="https://static1.squarespace.com/static/56d056fb40261db4d8f2f5af/t/5ba258714d7a9c88ca63cc33/1537366334614/logo.jpg" alt="Alpha Bulgaria">
             </a>
           </div>
         </div>
