--- a/template/css/redox.css
+++ b/template/css/redox.css
@@ -94,6 +94,15 @@ section h3.section-subheading {
   background: #ff6000;
   text-shadow: none;
 }
+.img-fluid {
+  width:100%;
+}
+
+.img-client {
+  max-height: 100%;
+  max-width: 100%;
+  padding-top:10px;
+}
 
 img::-moz-selection {
   background: transparent;
