nouveau logo + nouveaux textes

--- a/css/redox.css
+++ b/css/redox.css
@@ -75,7 +75,7 @@ section h3.section-subheading {
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: rgba(0,0,0, 0.3); !important;
+  background-color: rgba(0,0,0, 0.3)!important;
   border-color: black !important;
   color: #ff6000;
 }
@@ -755,6 +755,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #ff6000;
   color: white;
+  text-decoration: none;
 }
 
 /* Couleur des font awesome */
