--- a/css/redox.css
+++ b/css/redox.css
@@ -48,7 +48,6 @@ section h2.section-heading {
 section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 75px;
   text-transform: none;
   font-family: 'Raleway', Arial, sans-serif;
 }
@@ -199,6 +198,7 @@ header.masthead {
 
 header.masthead .logo {
   margin-top: 20vh;
+  max-width: 50%;
 }
 
 header.masthead .intro-text {
@@ -209,7 +209,7 @@ header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
   margin-bottom: 25px;
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 header.masthead .intro-text .intro-heading {
@@ -217,7 +217,7 @@ header.masthead .intro-text .intro-heading {
   font-weight: 700;
   line-height: 50px;
   margin-bottom: 25px;
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -228,14 +228,14 @@ header.masthead .intro-text .intro-heading {
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 25px;
-    font-family: 'Raleway', Arial, sans-serif;
+    font-family: 'Open Sans', Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
     font-size: 75px;
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 10px;
-    font-family: 'Raleway', Arial, sans-serif;
+    font-family: 'Open Sans', Arial, sans-serif;
   }
 }
 
