--- a/css/redox.css
+++ b/css/redox.css
@@ -208,13 +208,13 @@ header.masthead .intro-text {
 header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
-  margin-bottom: 25px;
+  /*margin-bottom: 25px;*/
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
 header.masthead .intro-text .intro-heading {
   font-size: 50px;
-  font-weight: 700;
+  font-weight: 900;
   line-height: 50px;
   margin-bottom: 25px;
   font-family: 'Open Sans', Arial, sans-serif;
@@ -227,7 +227,6 @@ header.masthead .intro-text .intro-heading {
   header.masthead .intro-text .intro-lead-in {
     font-size: 40px;
     line-height: 40px;
-    margin-bottom: 25px;
     font-family: 'Open Sans', Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
