--- a/css/redox.css
+++ b/css/redox.css
@@ -209,6 +209,7 @@ header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
   /*margin-bottom: 25px;*/
+  font-weight: 300;
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
@@ -216,7 +217,7 @@ header.masthead .intro-text .intro-heading {
   font-size: 50px;
   font-weight: 900;
   line-height: 50px;
-  margin-bottom: 25px;
+  margin-top: 25px;
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
@@ -227,13 +228,14 @@ header.masthead .intro-text .intro-heading {
   header.masthead .intro-text .intro-lead-in {
     font-size: 40px;
     line-height: 40px;
+    font-weight: 300;
     font-family: 'Open Sans', Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
     font-size: 75px;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 75px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     font-family: 'Open Sans', Arial, sans-serif;
   }
 }
