--- a/css/redox.css
+++ b/css/redox.css
@@ -199,6 +199,7 @@ header.masthead {
 header.masthead .logo {
   margin-top: 20vh;
   max-width: 50%;
+  width: 250px;
 }
 
 header.masthead .intro-text {
@@ -208,8 +209,7 @@ header.masthead .intro-text {
 header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
-  /*margin-bottom: 25px;*/
-  font-weight: 300;
+  font-weight: 200;
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
@@ -218,6 +218,7 @@ header.masthead .intro-text .intro-heading {
   font-weight: 900;
   line-height: 50px;
   margin-top: 25px;
+  margin-bottom: 0;
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
@@ -236,6 +237,7 @@ header.masthead .intro-text .intro-heading {
     font-weight: 900;
     line-height: 75px;
     margin-top: 10px;
+    margin-bottom: 0;
     font-family: 'Open Sans', Arial, sans-serif;
   }
 }
