--- a/layout/scripts.html
+++ b/layout/scripts.html
@@ -14,7 +14,8 @@
 <!-- Custom scripts for this template -->
 <script src="js/creative.js"></script>
 <script src="js/redox.js"></script>
-<!-- Hotjar -->
+
+<!-- Hotjar
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -24,4 +25,4 @@
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+</script>-->
