2 articles de blog

--- a/blog/layout/navbar.html
+++ b/blog/layout/navbar.html
@@ -11,13 +11,13 @@
             <a class="nav-link" href="/blog/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/about">À propos</a>
+            <a class="nav-link" href="/blog/about.php">À propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/all-posts">Articles</a>
+            <a class="nav-link" href="/blog/all-posts.php">Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/contact">Contact</a>
+            <a class="nav-link" href="/blog/contact.php">Contact</a>
           </li>
         </ul>
       </div>
