--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -14,6 +14,21 @@
     top: -150px;
 }
 
+.iframeWrapper {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.iframeWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 @media only screen and (max-width: 1000px) {
     .user-img {
         position: inherit;
@@ -29,3 +44,4 @@
         position: relative;
         top: -150px;
   }
+}
