dead link corrections

--- a/blog/layout/footer.html
+++ b/blog/layout/footer.html
@@ -29,7 +29,7 @@
                 </a>
             </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; <a href="www.redox-prod.ch" target="_blank">Redox Prod</a> 2019</p>
+            <p class="copyright text-muted">Copyright &copy; <a href="http://www.redox-prod.ch" target="_blank">Redox Prod</a> 2019</p>
         </div>
         </div>
     </div>
