--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -1,3 +1,9 @@
+#logoBlog {
+    width: 40px;
+    height: auto;
+    margin-right: 10px;
+}
+
 .user-img {
     position: inherit;
     margin: 0 20%;
