--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -55,3 +55,27 @@ header.masthead {
         top: -150px;
   }
 }
+
+/* Table */
+table {
+    border-collapse: collapse;
+    font-size: 0.8rem;
+    width: 100%;
+    text-align: center; 
+}
+table tr td:first-child, table tr th:first-child {
+    text-align: left;
+}
+
+table, th, td {
+    border: 1px solid black; 
+}
+
+th {
+    font-weight: bold;
+}
+
+td {
+    width: 25%;
+    padding: 5px; 
+}
