--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -15,13 +15,13 @@
             <a class="nav-link js-scroll-trigger" href="/#services">nos services</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#team">l'équipe</a>
+            <a class="nav-link js-scroll-trigger" href="/#team">L'agence</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#portfolio-header">portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="/nos-projets.php">Nos projets</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#contact">contact</a>
+            <a class="nav-link js-scroll-trigger" href="/nous-contacter.php">Contact</a>
         </li>
         </ul>
     </div>
