--- a/css/redox.css
+++ b/css/redox.css
@@ -24,7 +24,7 @@ p {
 }
 
 a {
-  color: #ff6000;
+  color: #b20000;
 }
 
 a:hover {
@@ -32,11 +32,11 @@ a:hover {
 }
 
 .text-primary {
-  color: #ff6000 !important;
+  color: #b20000 !important;
 }
 
 .bg-primary {
-  background-color: #ff6000;
+  background-color: #b20000;
 }
 
 h1,
@@ -84,41 +84,51 @@ section h3.section-subheading {
 }
 
 .btn-primary {
-  background-color: #ff6000;
-  border: solid 2px #ff6000;
+  background-color: #b20000;
+  border: solid 2px #b20000;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: rgba(0,0,0, 0.3)!important;
-  border-color: black !important;
-  color: #ff6000;
+  background-color: #ffffff;
+  border-color: #b20000 !important;
+  color: #000;
 }
 
 .btn-primary:active, .btn-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
-  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(254, 55, 55, 0.5) !important;
+  box-shadow: 0 0 0 0.2rem rgba(254, 55, 55, 0.5) !important;
 }
 
 .btn-secondary {
   background: transparent;
-  border: solid 2px #ff6000;
+  border: solid 2px #b20000;
   color: #212529;
 
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
-  background: #ff6000;
+  background: #b20000;
   color: white;
-  border-color: #ff6000;
+  border-color: #b20000;
 }
 
+.btn-light {
+  border: solid 2px #ffffff;
+}
+
+.btn-light:hover{
+  color: #ffffff;
+  background: transparent;
+}
+
+
 ::-moz-selection {
-  background: #ff6000;
+  background: #b20000;
   text-shadow: none;
 }
 
 ::selection {
-  background: #ff6000;
+  background: #b20000;
   text-shadow: none;
 }
 .img-fluid {
@@ -176,14 +186,14 @@ img::-moz-selection {
   right: 0;
   padding: 13px;
   text-transform: uppercase;
-  color: #ff6000;
+  color: #b20000;
   border: 0;
   background-color: black;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-toggler:hover {
-  background-color: #ff6000;
+  background-color: #b20000;
   color: black;
 }
 
@@ -193,7 +203,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #ff6000;
+  color: #b20000;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -205,8 +215,9 @@ img::-moz-selection {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-#mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ff6000;
+#mainNav .navbar-nav .nav-item .nav-link:active, #mainNav .navbar-nav .nav-item .nav-link:hover {
+  color: #ffffff;
+  background-color: #b20000;
 }
 
 @media (min-width: 992px) {
@@ -355,7 +366,7 @@ iframe {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(255, 96, 0, 0.9);
+  background: #b20000e1;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -452,7 +463,7 @@ iframe {
 }
 
 .portfolio-modal .modal-content img:hover {
-  border-color: #ff6000;
+  border-color: #b20000;
   border-width: 2px;
 }
 
@@ -562,7 +573,7 @@ iframe {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #ff6000;
+  background-color: #b20000;
 }
 
 .timeline > li .timeline-image h4 {
@@ -742,7 +753,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #ff6000;
+  border-color: #b20000;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -805,14 +816,14 @@ ul.social-buttons li a {
   height: 50px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  color: #ff6000;
+  color: #b20000;
   border-radius: 100%;
   outline: none;
   /*background-color: black;*/
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #ff6000;
+  background-color: #b20000;
   color: white;
   text-decoration: none;
 }
@@ -820,7 +831,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 /* Couleur des font awesome */
 
 .fa-inverse {
-  color: #ff6000;
+  color: #b20000;
 }
 
 
@@ -907,7 +918,7 @@ NOS-SERVICES.PHP
 
 #ourServices h2 {
   font-size: 3rem;
-  color: #ff6000;
+  color: #b20000;
   text-transform: uppercase;
   padding-bottom: 3rem;
 }
@@ -915,7 +926,7 @@ NOS-SERVICES.PHP
 .serviceShort {
   width: 100%;
   background-color: white;
-  border: #ff6000 1px solid;
+  border: #b20000 1px solid;
   padding: 20px;
   text-align: center;
 }
@@ -972,4 +983,92 @@ NOS-SERVICES.PHP
   justify-content: center;
   align-content: baseline;
   align-self: baseline;
+}
+
+#formulaireDeContact .form-group {
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+}
+
+#formulaireDeContact label {
+  color: #6c757d!important;
+  font-size: 0.9rem;
+}
+
+#formulaireDeContact .form-control {
+  display: block;
+  width: 100%;
+  height: calc(2.5rem + 2px);
+  padding: .5rem 1rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #f1f1f1;
+  background-clip: padding-box;
+  border: none;
+  border-radius: 0;
+}
+
+#formulaireDeContact textarea.form-control {
+	height:auto;
+}
+
+#contactUs {
+	background-color: #000;
+	background-image: url("../assets/images/layout/iceland_1_mir.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: top center;
+}
+
+#contactUs .container{
+	background-color: white;
+	padding: 50px;
+	margin-top: 3rem;
+	max-width: 800px;
+	border-radius:10px;
+}
+
+@media (max-width: 768px) {
+	#contactUs .container{
+    padding: 20px;
+    margin-top: 3rem;
+    max-width: 800px;
+    border-radius:0px;
+  }
+}
+.alert {
+  position: fixed;
+  top: 0;
+  margin: 10px 10%;
+  width: 80%;
+  z-index: 10000;
+}
+
+@media (max-width: 768px) {
+	.alert {
+    position: fixed;
+    top: 0;
+    margin: 10px 0;
+    width: 100%;
+    z-index: 10000;
+  }
+}
+
+.alert-btn {
+  background: none;
+  border: none;
+  color: inherit;
+}
+
+
+.contact-cta-header {
+  color: white;
+  background-color: #b20000;
+  padding: 50px 0;
+  /*
+  background-image: url(/assets/images/contact/lense-flare-modif.jpg);
+  background-size: cover;
+  background-position: center;*/
 }
